# NewsAgent

./: .gitignore  IMPLEMENTATION_LOG.md  PYTHON_VERSION_FIX.md  QUICKSTART.md  README.md  advanced_blog_crew.py  blog_crew.py  news_discover_verify_crew.py  news_fact_check_crew.py  pyproject.toml  requirements.txt  test_modelscope.py  tools_verify.py  tutorial_blog_crew.py  verify_setup.py
config/: agents.yaml  tasks.yaml
demo/: demo_data.json
news_verify/: README.md  __init__.py  agents_news.py  agents_verify.py  llm.py  pipeline_discover_verify.py  pipeline_fact_check.py  tasks_news.py  tasks_verify.py  utils.py
news_verify/tools/: __init__.py  crawl.py  verify.py
web_app/: README.md  __init__.py  app.py
web_app/static/: index.html
